--- a/Style/Style.css
+++ b/Style/Style.css
@@ -11,6 +11,12 @@ body {
     color: #544837;
     overflow-x: hidden;
 }
+h1, h2, h3 {
+    color: #2F281E;
+}
+img {
+    max-width: 100%;
+}
 button {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
@@ -58,7 +64,7 @@ button {
 header {
     height: 100px;
 }
-.Header__container {
+header .Container {
     display: flex;
     align-items: center;
     padding: 20px 0;
@@ -140,3 +146,33 @@ header {
 .Burger-menu.active {
     transform: translateX(0);
 }
+
+    /* Welcome */
+
+.Welcome .Container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+.Welcome__title {
+    width: 500px;
+    font-size: 73px;
+    margin-bottom: 35px;
+}
+.Welcome__subtitle {
+    font-size: 20px;
+    width: 400px;
+    margin-bottom: 50px;
+}
+.Welcome__text .Main-button {
+    padding: 10px 50px;
+    margin-bottom: 40px;
+}
+.Welcome__app p {
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 10px;
+}
+
+
+
