--- a/Style/Style.css
+++ b/Style/Style.css
@@ -84,14 +84,15 @@ header {
 header .Container {
     display: flex;
     align-items: center;
-    padding: 20px 0;
+    justify-content: space-between;
+    padding-block: 20px;
 }
 .Header__right {
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-left: auto;
     height: 100%;
+    min-width: 350px;
 }
 .Lang {
     padding: 5px 10px;
@@ -173,13 +174,13 @@ header .Container {
     margin-bottom: 50px;
 }
 .Welcome__title {
-    width: 500px;
+    max-width: 500px;
     font-size: 70px;
     margin-bottom: 35px;
 }
 .Welcome__subtitle {
     font-size: 20px;
-    width: 400px;
+    max-width: 400px;
     margin-bottom: 50px;
 }
 .Welcome__text .Main-button {
@@ -192,6 +193,7 @@ header .Container {
     margin-bottom: 10px;
 }
 
+
     /* Audience */
 
 .Audience {
@@ -199,11 +201,12 @@ header .Container {
 }
 .Audience__content {
     display: flex;
-    gap: 100px;
     justify-content: center;
+    gap: 100px;
+    flex-wrap: wrap;
 }
 .Audience__item {
-    width: 200px;
+    max-width: 200px;
 }
 .Audience__item > * {
     margin-bottom: 20px;
@@ -401,9 +404,10 @@ header .Container {
     justify-content: center;
     position: absolute;
     top: 0;
-    left: 110px;
+    left: 15%;
     
-    width: 450px;
+    
+    width: 65%;
     height: 100px;
 
     background: #fff;
@@ -459,9 +463,11 @@ header .Container {
 }
 .Customer__info {
     margin-bottom: 20px;
+    
 }
 .Customer__text p {
     margin-bottom: 20px;
+    color: #fff;
 }
 .Customers .swiper-wrapper {
     height: 400px;
@@ -478,6 +484,9 @@ header .Container {
 
     /* Learning */
 
+.Learning {
+    padding-block: 50px;
+}
 .Learning__header {
     display: flex;
     justify-content: center;
@@ -500,7 +509,7 @@ header .Container {
 
 }
 .Learning__title {
-    width: 600px;
+    max-width: 600px;
     font-size: 70px;
     margin-bottom: 50px;
 }
@@ -513,6 +522,7 @@ footer {
 }
 .Footer__content {
     display: flex;
+    flex-wrap: wrap;
     gap: 100px;
 }
 .Footer__main {
@@ -563,4 +573,58 @@ footer {
 }
 .Credits a:hover {
     color: #000;
+}
+
+@media (max-width: 1600px) {
+    .Container {
+        padding-inline: 70px;
+    }
+    .Footer__column-1 {
+        flex: 0 0 100%;
+    }
+}
+@media (max-width: 1000px) {
+    header .Container {
+        flex-direction: column;
+        gap: 50px;
+    }
+    .Learning__title {
+        font-size: 50px;
+    }
+    .Learning__header {
+        gap: 20px;
+    }
+    
+}
+@media (max-width: 720px) {
+    .Welcome {
+        padding-bottom: 50px;
+    }
+    .Welcome__title {
+        font-size: 50px;
+    }
+    .Welcome .Container {
+        flex-direction: column;
+    }
+    .Welcome__image {
+        position: absolute;
+        z-index: -1;
+    }
+    .Welcome__image::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: rgba(255, 255, 255, 0.5);
+    }
+    
+    .Process__item {
+        gap: 50px;
+    }
+}
+@media (max-width: 650px) {
+    .Footer__content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
