--- a/Style/Style.css
+++ b/Style/Style.css
@@ -539,7 +539,7 @@ footer {
 .Footer__socials p {
     margin-bottom: 10px;
 }
-.Footer__app {
+.Footer__apps {
     margin-bottom: 50px;
 }
 .Footer__socials a {
